--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+
 <!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/dreamspace-app/src/assets/icon/icon.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Dreamspace-home decor website</title>
   </head>
   <body>
     <div id="root"></div>
