--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/dreamspace-app/src/assets/icon/icon.jpg" />
+    <link rel="icon" type="image" href="/dreamspace-app/src/assets/icon/icon.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dreamspace-home decor website</title>
   </head>
